--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
         <p id="out"></p>
         <p id="notes"></p>
 
-        <script type="text/javascript" src="sword.js"></script>
+        <script type="text/javascript" src="index.js"></script>
     </body>
 </html>
